--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: 'Press Start 2P', system-ui;
   background-color: #ee5522;
@@ -9,6 +14,15 @@ body {
 }
 .main-container {
   border: 2px solid white;
+  width: 90%;
+  margin: 50px auto;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+h1,
+h2 {
+  text-align: center;
 }
 .draggable-elements,
 .droppable-elements {
