--- a/main.scss
+++ b/main.scss
@@ -13,7 +13,7 @@ body {
   background-size: cover;
 }
 .main-container {
-  border: 2px solid white;
+  /* border: 2px solid white;*/
   width: 90%;
   margin: 50px auto;
   display: flex;
@@ -26,7 +26,7 @@ h2 {
 }
 .draggable-elements,
 .droppable-elements {
-  border: 2px solid black;
+  // border: 2px solid black;
   display: flex;
   justify-content: space-around;
   gap: 10px;
@@ -44,4 +44,10 @@ h2 {
 
 .image {
   width: 120px;
+}
+
+.wrong {
+  text-align: center;
+  font-size: 2em;
+  color: white;
 }
