feat metiendo controles musica y stylos musica

--- a/main.scss
+++ b/main.scss
@@ -3,6 +3,7 @@
 @import './componentes/startGame.scss';
 @import './componentes/score.scss';
 @import './componentes/btnvolverMenuPrin.scss';
+@import './componentes/musica.scss';
 
 * {
   margin: 0;
