--- a/componentes/musica.scss
+++ b/componentes/musica.scss
@@ -1,26 +1,25 @@
 .music-controls {
   display: flex;
 
-  gap: 1rem;
-  margin: 20px;
+  gap: $tercer-gap;
+  margin: $cuarto-margin;
 }
 
 #playPauseBtn {
   font-family: 'Press Start 2P', system-ui;
-  font-size: 16px;
-  padding: 10px 20px;
-  margin: 20px 40px;
+  font-size: $primary-font-size;
+  padding: $secundary-padding;
+  margin: $quinto-margin;
   cursor: pointer;
-  border-radius: 5px;
-  background-color: white;
+  border-radius: $primary-border-radius;
+  background-color: $primary-color;
   cursor: pointer;
   transition: background-color 0.3s;
-
   justify-content: center;
 }
 
 #playPauseBtn:hover {
-  background-color: orange;
+  background-color: $secundary-background-color;
 }
 
 #volumeControl {
